--- a/.classpath
+++ b/.classpath
@@ -177,6 +177,6 @@
 	<classpathentry kind="lib" path="/usr/local/hadoop/hadoop-2.6.0/share/hadoop/common/lib/curator-client-2.6.0.jar"/>
 	<classpathentry kind="lib" path="/usr/local/hadoop/hadoop-2.6.0/share/hadoop/common/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="/usr/local/hadoop/hadoop-2.6.0/share/hadoop/common/hadoop-nfs-2.6.0.jar"/>
-	<classpathentry kind="lib" path="/usr/local/hadoop/hadoop-2.6.0/share/hadoop/common/hadoop-common-2.6.0.jar"/>
+	<classpathentry kind="lib" path="/usr/local/hadoop/hadoop-2.6.0/share/hadoop/common/hadoop-common-2.6.0.jar" sourcepath="/usr/local/hadoop/hadoop-2.6.0-src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
